--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,3 +4,8 @@ andrew:
   name: Andrew Test
   email: andrew@test.com
   password_digest: <%= User.digest('password') %>
+
+odin:
+  name: Odin Test
+  email: odin@test.com
+  password_digest: <%= User.digest('password') %>
