--- a/test/fixtures/snapshots.yml
+++ b/test/fixtures/snapshots.yml
@@ -1,9 +1,16 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  content: MyText
-  user: one
+project001:
+  content: "Great job on the new user interface."
+  created_at: <%= 10.minutes.ago %>
+  user: andrew
 
-two:
-  content: MyText
-  user: two
+project002:
+  content: "The new signup method works perfectly."
+  created_at: <%= 2.months.ago %>
+  user: andrew
+
+most_recent:
+  content: "Well done on the client demo today."
+  created_at: <%= Time.zone.now %>
+  user: andrew
