--- a/test/fixtures/snapshots.yml
+++ b/test/fixtures/snapshots.yml
@@ -14,3 +14,10 @@ most_recent:
   content: "Well done on the client demo today."
   created_at: <%= Time.zone.now %>
   user: andrew
+
+<% 40.times do |n| %>
+snapshot_<%= n %>:
+  content: <%= Faker::Lorem.sentence(word_count: 5) %>
+  created_at: <%= 20.days.ago %>
+  user: andrew
+<% end %>
