--- a/test/fixtures/snapshots.yml
+++ b/test/fixtures/snapshots.yml
@@ -21,3 +21,23 @@ snapshot_<%= n %>:
   created_at: <%= 20.days.ago %>
   user: andrew
 <% end %>
+
+project010:
+  content: "Built a new user enquiry form"
+  created_at: <%= 1.day.ago %>
+  user: tony
+
+project011:
+  content: "Add new fields to the user application form"
+  created_at: <%= 2.months.ago %>
+  user: frank
+
+project012:
+  content: "Improved user authentication"
+  created_at: <%= 1.hour.ago %>
+  user: mary
+
+project013:
+  content: "New relay created to handle enquiry form"
+  created_at: <%= 18.minutes.ago %>
+  user: john
