--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -15,5 +15,5 @@ odin:
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@test.com" %>
-  password_digest: <%= User.digest('password123') %>
+  password_digest: <%= User.digest('password') %>
 <% end %>
